--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>CTIAutomation</groupId>
-	<artifactId>CTIAutomationTest</artifactId>
+	<groupId>TestAutomation</groupId>
+	<artifactId>TestAutomation</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>CTIAutomation-Test</name>
-	<description>CTIAutomation-Test</description>
+	<name>TestAutomation</name>
+	<description>TestAutomation</description>
    
 
 	<repositories>
