--- a/pom.xml
+++ b/pom.xml
@@ -106,7 +106,12 @@
 		<plugin>
 	        <groupId>org.apache.maven.plugins</groupId>
 		    <artifactId>maven-compiler-plugin</artifactId>
-			<version>3.1</version>
+			<version>2.3.2</version>
+                <configuration>
+                  <source>1.6</source>
+                  <target>1.6</target>
+                  <encoding>UTF-8</encoding>
+                </configuration>
 	      </plugin>
 			<plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -157,7 +162,7 @@
                     <systemPropertyVariables>
                          <summit.url>${summit.url}</summit.url>
                     </systemPropertyVariables>
-                    <systemPropertyVariables>
+               <!--      <systemPropertyVariables>
                          <coaches.url>${coaches.url}</coaches.url>
                     </systemPropertyVariables>
                      <systemPropertyVariables>
@@ -165,7 +170,7 @@
                     </systemPropertyVariables>
                      <systemPropertyVariables>
                          <stakebook.url>${stakebook.url}</stakebook.url>
-                    </systemPropertyVariables>                    
+                    </systemPropertyVariables>                    -->
                     <useFile>true</useFile>
                     <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
                 </configuration>
