--- a/pom.xml
+++ b/pom.xml
@@ -162,12 +162,12 @@
                     <systemPropertyVariables>
                          <summit.url>${summit.url}</summit.url>
                     </systemPropertyVariables>
-               <!--      <systemPropertyVariables>
+                     <systemPropertyVariables>
                          <coaches.url>${coaches.url}</coaches.url>
                     </systemPropertyVariables>
                      <systemPropertyVariables>
                          <leadership.url>${leadership.url}</leadership.url>
-                    </systemPropertyVariables> -->
+                    </systemPropertyVariables>
                      <systemPropertyVariables>
                          <stakebook.url>${stakebook.url}</stakebook.url>
                     </systemPropertyVariables>                   
